--- a/css/edCSS_w.css
+++ b/css/edCSS_w.css
@@ -80,7 +80,7 @@ body {
   flex-direction: column;
   gap: 3px;
   background-color: #ffffff;
-  box-shadow: 2px 4px 8px rgba(0, 0, 0, 1);
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
   display: none;
 }
 .ed-subside.open {
@@ -93,11 +93,19 @@ body {
   margin-bottom: 8px;
 }
 	.section-title {
-	  font-weight: bold;
+	  /* font-weight: bold;  */
 	  font-size: 0.95em;
 	  margin-top: 10px;
 	  margin-bottom: 4px;
 	  color: #333;
+	  /* afetgit */
+	  display: flex;
+	  justify-content: space-between;
+	  align-items: center;
+	  background: #f0f0f0;
+	  padding: 8px 12px;
+	  font-weight: bold;
+	  position: relative;
 	}
 /* Zona central: Àrea de treball */
 .ed-panel {
@@ -230,3 +238,18 @@ body {
 	  color: #184aad;
 	  transform: translate(1px, 1px);
 	}
+	
+
+.ed-btn-x {
+  background: none;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  color: #444;
+  transition: transform 0.2s ease;
+}
+
+.ed-btn-x:hover {
+  transform: scale(1.2);
+  color: red;
+}
