--- a/css/edCSS_w.css
+++ b/css/edCSS_w.css
@@ -93,20 +93,35 @@ body {
   margin-bottom: 8px;
 }
 	.section-title {
-	  /* font-weight: bold;  */
 	  font-size: 0.95em;
-	  margin-top: 10px;
+	  margin-top: 5px;
 	  margin-bottom: 4px;
 	  color: #333;
-	  /* afetgit */
-	  display: flex;
-	  justify-content: space-between;
-	  align-items: center;
-	  background: #f0f0f0;
-	  padding: 8px 12px;
+	  padding: 4px 12px;
 	  font-weight: bold;
-	  position: relative;
+	  position: relative; /* important per al posicionament absolut */
 	}
+	.ed-closeside-bt {
+	  position: absolute;
+	  top: -4px;   /* ajusta segons et convinga */
+	  right: -12px; /* ajusta segons et convinga */
+	  background: none;
+	  border: none;
+	  cursor: pointer;
+	  font-size: 1.2em;
+	  color: #666;
+	  display: flex;
+	  align-items: center;
+	  justify-content: center;
+	  padding: 0;
+	}
+	.ed-closeside-bt:hover {
+	  color: #dc3545; /* Roig de Bootstrap */
+	}
+	
+		
+		
+		
 /* Zona central: Àrea de treball */
 .ed-panel {
   flex-grow: 1;
