--- a/css/edCSS_w.css
+++ b/css/edCSS_w.css
@@ -69,6 +69,9 @@ body {
   font-weight: bold;
   color: #003399;
 }
+.ed-side-bt:hover {
+  font-weight: bold;
+}
 
 /* Panels de Paràmetres */
 .ed-subside {
@@ -211,9 +214,10 @@ body {
   padding: 4px 6px 4px 6px;
 }
 .ed-input.color     {
-  width: 36px;
+  width: 24px;
+  height: 24px;
   padding: 0;
-  border: none;
+  border: 0px solid black;
   background: none;
   vertical-align: middle;
   margin-left: 6px;
@@ -226,45 +230,55 @@ body {
 	  outline: 1px solid var(--active);
 	  outline-offset: 1px;
 	}
+	.ed-input:hover {
+	  outline: 1px solid var(--active);
+	  outline-offset: 1px;
+	}
+
 
 .ed-btn         {
-  width: 30px;
+  width: 25px;
   height: 25px;
   margin-left: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 2px solid #808080;
   border-radius: 6px;
-  background: #E0E0E0;
+  border: 2px solid #808080;
+  background-color: #E0E0E0;
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
+  color: #202020;
   font-size: 1em;
   font-weight: 700;
-  color: #222;
   cursor: pointer;
   user-select: none;
   transition: border .17s, background .17s, box-shadow .17s, transform .17s ;
-  outline: none;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 	.ed-btn.active    {
-	  border-color: var(--active);
-	  background: #e6f0fd;
-	  box-shadow: -1px -1px 1px 1px rgba(0, 0, 100, 0.5);
-	  color: #184aad;
+	  border: 1px solid #E0E0E0;
+	  background-color: #606060;
+	  box-shadow: -1px -1px 1px 1px rgba(0, 0, 0, 0.5);
+	  color: #E0E0E0;
 	  transform: translate(1px, 1px);
 	}
+    .ed-btn:hover{
+	  background-color: #F8F8F8;
+	}
+	.ed-btn.active:hover    {
+	  background-color: #808080;
+	}
 	
-
+		
 .ed-btn-x {
+  display: block;
   background: none;
   border: none;
   font-size: 18px;
   cursor: pointer;
-  color: #444;
+  color: #404040;
   transition: transform 0.2s ease;
 }
 
 .ed-btn-x:hover {
-  transform: scale(1.2);
-  color: red;
+   color: red;
 }
